--- a/docs/tools/Makefile
+++ b/docs/tools/Makefile
@@ -7,7 +7,7 @@ SPHINXOPTS    ?= -c . -d .sphinx/.doctrees
 SPHINXBUILD   ?= sphinx-build
 SPHINXDIR     = .sphinx
 SOURCEDIR     = ../src/
-BUILDDIR      = ./_build
+BUILDDIR      = ../_build
 VENVDIR       = $(SPHINXDIR)/venv
 PA11Y         = $(SPHINXDIR)/node_modules/pa11y/bin/pa11y.js
 VENV          = $(VENVDIR)/bin/activate
